# quire-wasm

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml  package.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
plan/: plan.md
plan/tasks/: README.md
scripts/: check_unsafe_comments.sh
spec/: index.md  spec.md  tests.md
spec/functional/: FR-001-render.md  FR-002-parse-document.md  FR-003-extract.md  FR-004-validate.md  index.md
spec/nfr/: NFR-001-render-budget.md  index.md
spec/stakeholder/: StR-001-byte-identical-preview.md  index.md
src/: lib.rs
tests/: extract_validate.rs  filament_core_parity.mjs  native_smoke.rs  render_parity.rs
